kubernetes/cheese/cheese.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cheddar
  name: cheddar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cheddar
  template:
    metadata:
      labels:
        app: cheddar
    spec:
      containers:
      - image: errm/cheese:cheddar
        name: cheese
---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    labels:
      app: stilton
    name: stilton
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: stilton
    template:
      metadata:
        labels:
          app: stilton
      spec:
        containers:
        - image: errm/cheese:stilton
          name: cheese
---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    labels:
      app: wensleydale
    name: wensleydale
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: wensleydale
    template:
      metadata:
        labels:
          app: wensleydale
      spec:
        containers:
        - image: errm/cheese:wensleydale
          name: cheese
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cheddar
  name: cheddar
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: cheddar
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: stilton
  name: stilton
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: stilton
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wensleydale
  name: wensleydale
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: wensleydale
